# ml-workflows

./: .gitignore  LICENSE  README.md
api/: README.md
api/fastapi/: Dockerfile  README  docker-compose.yml  requirements.txt
api/fastapi/app/: main.py
api/fastapi/app/api/routes/: prediction.py  router.py
api/fastapi/app/core/: config.py  event_handlers.py  logger.py  security.py
api/fastapi/app/models/: payload.py  prediction.py  user.py
api/fastapi/app/services/: microservices.py  models.py
api/fastapi/serialized_models/: encoder.pkl  rf_regressor.pkl
databricks/analytics/ddl/: _drop.py  _get_schema.py
databricks/analytics/ddl/curated/: bi.mart.sql  utility.orchestration.merge.sql
databricks/analytics/ddl/wrangled/: economy.example.sql  raw.dynamic.sql  raw.example.sql
databricks/analytics/etl/_jobs/: 100-refresh_extracts_parallel.py
databricks/analytics/etl/extract/: _core.py  _merge.py
databricks/terraform/: README.md  requirements.txt
databricks/terraform/databricks/aws/: iam-cross-account.tf  iam-instance-profile.tf  iam-s3-external.tf  iam-storage-credential.tf  iam-unity.tf  main.tf  provider.tf  s3.tf  variables.tf
databricks/terraform/databricks/aws/modules/account_users/: main.tf  outputs.tf  variables.tf
databricks/terraform/databricks/aws/modules/clusters/: main.tf  variables.tf
databricks/terraform/databricks/aws/modules/privatelink/: variables.tf
databricks/terraform/databricks/aws/modules/unity/: _catalogs.tf  _schemas.tf  main.tf  variables.tf
databricks/terraform/databricks/aws/modules/workspace/: main.tf  outputs.tf  variables.tf
databricks/terraform/databricks/aws/modules/workspace_users/: main.tf  outputs.tf
databricks/terraform/databricks/aws/unity-stage-1/: README.md  main.tf  variables.tf
databricks/terraform/databricks/aws/unity-stage-2/: README.md  main.tf  unity_catalog_infra.tf  variables.tf  workspace_metastore.tf
databricks/terraform/random/: auth.tf  cluster_init_dask.sh  job.tf  metastore.tf  notebook-getting-started.py  notebook.tf  unity.tf  workspace(and clusters).tf
infrastructure/: Pulumi.yaml  README.md  __main__.py  requirements.txt  vpc.py  vpn.py
infrastructure/agent-layer/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  pyproject.toml
infrastructure/agents/: Pulumi.yaml  __main__.py  provisioners.py  pyproject.toml
infrastructure/container-layer/: Pulumi.yaml  __main__.py  pyproject.toml
infrastructure/containers/: Pulumi.yaml  __main__.py
infrastructure/load-balancers/: Pulumi.yaml  __main__.py  pyproject.toml
infrastructure/loadbalancing-layer/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  pyproject.toml
infrastructure/network-layer/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  pyproject.toml
infrastructure/networking/: Pulumi.yaml  __main__.py  pyproject.toml
infrastructure/old_structure/container-layer/: dask_cloudprovider.py
infrastructure/old_structure/loadbalancing-layer/: __main__.py
infrastructure/refactoring/: Pulumi.dev.yaml  Pulumi.yaml  agents.py  dask.py  iam.py  pyproject.toml  vpc.py  vpn.py
infrastructure/vpn-layer/: Pulumi.dev.yaml  README.md  __main__.py  pyproject.toml
ml-models/: docker-compose.yml  pyproject.toml  sample_model.ipynb  test.py
prefect/: README.md  pyproject.toml
prefect/infrastructure/agent-layer/: __main__.py  old.py
prefect/infrastructure/container-layer/: Pulumi.dev.yaml  __main__.py
prefect/infrastructure/loadbalancing-layer/: __main__.py
prefect/infrastructure/vpn-layer/: Pulumi.yaml  README.md  pyproject.toml
prefect/ml-models/: Dockerfile.dask  Dockerfile.notebook  README.md  test.py
prefect/workflows/: README.md  pyproject.toml  setup.sh
prefect/workflows/etl/: etl_workflow.py
workflows/: README.md  pyproject.toml
workflows-agents/: README.md
workflows/ml/: flow.py
