[tool.poetry]
name = "ml-models"
version = "0.1.0"
description = "Resources to build and save models for later inference"
authors = ["Brontomerus <brandon.donelan@outlook.com>"]
license = "BSD 3-Clause License"

[tool.poetry.dependencies]
python = "^3.8"
dask-cloudprovider = "^2021.3.0"
dask = "^2021.3.0"
boto3 = "^1.17.29"
awscli = "^1.19.29"
joblib = "^1.0.1"
bokeh = "^2.3.0"
s3fs = "^0.5.2"
pyarrow = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
