[tool.poetry]
name = "agent-layer"
version = "0.1.0"
description = "IaC for managing Prefect Agents in ml-workflows project"
authors = ["Brontomerus <brandon.donelan@outlook.com>"]
license = "BSD 3-Clause License"

[tool.poetry.dependencies]
python = "^3.8"
pulumi = ">=2.0.0,<3.0.0"
pulumi-aws = ">=3.2.0,<4.0.0"
pulumi-docker = ">=2.8.0, <3.0.0"
paramiko = ">=2.7.1"

[tool.poetry.dev-dependencies]
awscli = "^1.19.28"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
