[tool.poetry]
name = "infrastructure"
version = "0.1.0"
description = "Pulumi IaC for defining Dask environment"
authors = ["Brontomerus <brandon.donelan@outlook.com>"]
license = "BSD 3-Clause License"

[tool.poetry.dependencies]
python = "^3.8"
pulumi = "^2.24.1"
pulumi-aws = "^3.38.1"
pulumi-docker = "^2.10.0"
dask-cloudprovider = ">=2021.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
