[tool.poetry]
name = "workflows"
version = "0.1.0"
description = "Prefect & Dask workflows for operating serverless Machine Learning batch processes on AWS infrastructure"
authors = ["Brontomerus <brandon.donelan@outlook.com>"]
license = "BSD 3-Clause License"

[tool.poetry.dependencies]
python = "^3.8"
prefect = "^0.14.12"
dask = "^2021.3.0"
boto3 = "^1.17.27"
s3fs = "^0.5.2"
dask-ml = "^1.8.0"
pandas = "^1.2.3"

[tool.poetry.dev-dependencies]
awscli = "^1.19.27"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
